tdf#156151: Take PDF DPI into account when outputting Type 3 glyphs

We were always assuming the default 720 DPI, but this is not always true
when printing to file as the DPI would depend on printer settings in
this case.

Change-Id: I747f8e24f0942ecb94eb8acfc1dd9972d83ba0e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153978
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit c1dcffceb14cd35c7168ba2108b2f2e9aa875b56)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153997
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>